# spanish-grid-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/spanish_grid_mcp/: cache.py  rest.py  server.py
src/spanish_grid_mcp/clients/: __init__.py  aemet.py  esios.py  ree.py
tests/: test_clients.py  test_server.py
