[project]
name = "spanish-grid-mcp"
version = "0.1.0"
description = "MCP server exposing Spanish electricity grid data (ESIOS, REE, AEMET) as tools for LLM agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Raúl Reguillo", email = "raul.reguillo@gmail.com" }]
keywords = ["mcp", "claude", "electricity", "spain", "esios", "ree", "aemet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "diskcache>=5.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[project.scripts]
spanish-grid-mcp = "spanish_grid_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spanish_grid_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"
